# alpha_infection

./: .alpha_infection.cfg  .gitignore  CMakeLists.txt  LICENSE  README.md  WHY_NAMING.txt  _vimrc_local.vim  ai_notes.txt  alpha_infection.c  alpha_infection.cpp  alpha_infection.h  build.sh  conanfile.txt  config.c  config.cpp  config.h  engine.cpp  graphics.cpp  log.h  logging.c  logging.h  main.c  main.cpp  mix.exs  new.cpp  setup.sh  sound.c  sound.cpp  sound.h  utils.c
.conan/: conan.sh
CMakeModules/: FindConfig++.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
OLD/: alpha_infection.cpp  alpha_infection.h  config.h  graphics.cpp  interface.cpp  log.cpp  old_main.cpp  sound.h  utils.cpp  utils.h
config/: config.exs
docs/: NOTES  NOTES.md
includes/: config.hxx  engine.hxx  game.hxx  logger.hxx
includes/engine/: resources.hxx
lib/: alpha_infection.ex
lib/alpha_infection/: cartographer.ex
lib/alpha_infection/cartographer/: collectable.ex  room.ex
lib/alpha_infection/cartographer/collectable/: health_pack.ex  key_card.ex  weapon.ex
src/: config.cxx  engine.cxx  game.cxx  logger.cxx  main.cxx
test/: alpha_infection_test.exs
